[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster_doxygen"
version = "1.0.0"
description = "Script to generate the lobster common interchange format from a doxygen XML output."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Andreas Merkle", email = "andreas.merkle@newtec.de" }
]
license = {text = "GNU General Public License Version 3"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "toml>=0.10.2"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/lobster-doxygen"
repository = "https://github.com/NewTec-GmbH/lobster-doxygen"
tracker = "https://github.com/NewTec-GmbH/lobster-doxygen/issues"

[project.scripts]
lobster_doxygen = "lobster_doxygen.lobster_doxygen:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
lobster_doxygen = ["pyproject.toml"]
