[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-doxygen"
version = "1.0.0"
description = "Script to generate the lobster common interchange format from a doxygen XML output."
readme = "README.md"
requires-python = ">=3.10, <3.13"
authors = [
    { name = "Andreas Merkle", email = "andreas.merkle@newtec.de" },
    { name = "Dominik Knoll", email = "dominik.knoll@newtec.de"}
]
license = "GPL-3.0-only" 
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "toml>=0.10.2",
    "bmw-lobster==1.0.*",
    "doxmlparser>=1.13.2",
    "rich==14.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest > 5.0.0",
    "pytest-cov[all]",
    "toml>=0.10.2",
    "tomlkit>=0.13.2",
    "pylint>=3.3.1",
    "Sphinx>=8.1.3",
    "sphinx-favicon>=1.0.1",
    "sphinx-rtd-theme>=3.0.1",
    "pyinstaller>=6.11.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-plantuml>=0.30",
    "m2r>=0.3.1",
    "pyTRLCConverter==1.0.*",
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/lobster-doxygen"
repository = "https://github.com/NewTec-GmbH/lobster-doxygen"
tracker = "https://github.com/NewTec-GmbH/lobster-doxygen/issues"

[project.scripts]
lobster-doxygen = "lobster_doxygen.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
lobster_doxygen = ["pyproject.toml"]
